src/app/torrents-table/torrents-table.component.scss
.hidden {
  position: absolute;
  visibility: hidden;
  display: none;
  pointer-events: none;
}

.torrent-table-container {
    display: flex;
    flex-direction: column;
}

th.mat-sort-header-sorted {
    color: black;
}

mat-spinner {
    align-self: center;
    margin: 5% auto 10px auto;
}

mat-table {
    height: 73vh;
    overflow-y: scroll;
}

/** Progress bar components */
.custom_progress_bar {
    width: 100%;

    .ui-progressbar.ui-progressbar-determinate {
      .ui-progressbar-label {
        .white_label {
          color: white
        }
        font-weight: 600;
      }

      .ui-progressbar-value {
        background: #03A9F4;
      }
    }
}

.custom_progress_bar.white_label {
  .ui-progressbar.ui-progressbar-determinate {
    .ui-progressbar-label {
      color: white
    }
  }
}

mat-header-row {
  min-width: max-content;
}

.mat-row {
    transition: background-color 0.15s ease;
    background-color: unset;

    &.selected {
      background-color: #f2f2f2;
    }
}

.mat-row:hover {
    background-color: #f2f2f2;

}

.dark-theme .mat-row {
  &.selected {
    background-color: #5c5c5c;
  }
}

.dark-theme .mat-row:hover {
    background-color: #5c5c5c;
}

.mat-cell {
    font-size: 13.5px;
    cursor: pointer;
}

#deleteTorrents {
    margin: 15px;
    margin-left: 10px;
}

#loading_p {
    width: 50px;
    align-self: center;
    margin: 10px auto 10px auto;
}

.cdk-drag-preview {
  box-sizing: border-box;
  border-radius: 4px;
  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
              0 8px 10px 1px rgba(0, 0, 0, 0.14),
              0 3px 14px 2px rgba(0, 0, 0, 0.12);

  padding: 20px;
}

.cdk-drag-placeholder {
  opacity: 0;
}

.cdk-drag-animating {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

/** Sizes of each column */
.mat-column-Name {
    flex: 0 0 27% !important;
    overflow-wrap: break-word;

    word-wrap: break-word;
    word-break: break-word;

    margin-left: 20px;

    min-width: 300px;
}

.mat-column-select {
    flex: 0 0 3% !important;
    overflow-wrap: break-word;

    word-wrap: break-word;
    word-break: break-word;

    min-width: 55px;
    margin-left: 10px;
}

.mat-column-Actions {
    flex: 0 0 8% !important;
    overflow-wrap: break-word;

    word-wrap: break-word;
    word-break: break-word;

    justify-content: center;

    margin: 2px;

    min-width: 150px;
}

.mat-column-Size {
    flex: 0 0 5% !important;
    overflow-wrap: break-word;

    word-wrap: break-word;
    word-break: break-word;

    padding-left: 10px;
    justify-content: center;

    min-width: 80px;
}

.mat-column-Progress {
    flex: 0 0 12% !important;
    overflow-wrap: break-word;

    word-wrap: break-word;
    word-break: break-word;

    justify-content: center;

    min-width: 180px;
    margin-left: 10px;
    margin-right: 10px;
}

.mat-column-Status {
    flex: 0 0 !important;
    overflow-wrap: break-word;

    word-wrap: break-word;
    word-break: break-word;

    justify-content: center;

    min-width: 140px;
    margin-left: 10px;
    margin-right: 10px;
}

.mat-column-Down-Speed {
    flex: 0 0 5% !important;
    overflow-wrap: break-word;

    word-wrap: break-word;
    word-break: break-word;

    justify-content: center;

    min-width: 90px;
}

.mat-column-Up-Speed {
    flex: 0 0 5% !important;
    overflow-wrap: break-word;

    word-wrap: break-word;
    word-break: break-word;

    justify-content: center;

    min-width: 90px;
}

.mat-column-ETA {
    flex: 0 0 !important;
    overflow-wrap: break-word;

    word-wrap: break-word;
    word-break: break-word;

    padding-left: 5px;
    padding-right: 5px;

    justify-content: center;

    min-width: 140px;
}


.mat-column-Completed-On {
    overflow-wrap: break-word;

    word-wrap: break-word;
    word-break: break-word;

    min-width: 150px;
}

